[gd_scene load_steps=9 format=2]

[ext_resource path="res://Art/Spr_Ship1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Shot.tscn" type="PackedScene" id=3]
[ext_resource path="res://Art/Temp Art/cannon-shot.svg" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 55 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("RightCannonSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 49, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LeftCannonSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -69, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "lCannonRecoil"
length = 0.75
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("LeftCannonSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -69, 1 ), Vector2( -49, 1 ), Vector2( -69, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "rCannonRecoil"
length = 0.75
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("RightCannonSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 69, 1 ), Vector2( 49, 1 ), Vector2( 69, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
Shot = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="RightCannonSprite" type="Sprite" parent="."]
position = Vector2( 69, 1 )
rotation = -0.785398
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 4 )

[node name="LeftCannonSprite" type="Sprite" parent="."]
position = Vector2( -69, 1 )
rotation = 2.35619
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 4 )

[node name="RightCannon" type="Position2D" parent="."]
position = Vector2( 70, 0 )

[node name="RightCannonDirection" type="Position2D" parent="."]
position = Vector2( 75, 0 )

[node name="LeftCannon" type="Position2D" parent="."]
position = Vector2( -70, 0 )

[node name="LeftCannonDirection" type="Position2D" parent="."]
position = Vector2( -75, 0 )

[node name="ShotCooldown" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/lCannonRecoil = SubResource( 4 )
anims/rCannonRecoil = SubResource( 3 )
